# llama-index-demo

./: .gitattributes  .gitignore  LICENSE  main.py  pyproject.toml  requirements.txt
data/: example1.txt  example2.txt  example3.txt
docs/: index.md
src/llama_demo/: __init__.py  cli.py  utils.py
src/llama_demo/examples/: __init__.py  simple_query.py  starter.py  streaming_events.py
tests/: __init__.py  test_simple_query.py  test_utils.py
tests/examples/: test_simple_query.py  test_streaming_events.py
