[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "llama-demo"
version = "0.1.0"
description = "A demonstration project for using LlamaIndex"
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "llama-index>=0.12.31",
]

[project.scripts]
llama-demo = "llama_demo.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.12",
    "black>=22.1",
    "isort>=5.10",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
testpaths = ["tests"]
