[build-system]
requires = ["setuptools >= 79.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llama-demo"
version = "0.1.0"
description = "A demonstration project for using LlamaIndex"
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "llama-index>=0.12.31",
    "llama-index-utils-workflow>=0.3.1",
]

[project.scripts]
llama-demo = "llama_demo.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-asyncio",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
testpaths = ["tests"]
